<resources>
    <string name="app_name">Animex</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="choose_your_interest">Choose Your Interest</string>
    <string name="choose_your_interests_and_get">Dont worry, you can always change it later.</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="action">Action</string>
    <string name="ecchi">Ecchi</string>
    <string name="adventure">Adventure</string>
    <string name="mecha">Mecha</string>
    <string name="since">Since</string>
    <string name="romance">Romance</string>
    <string name="science">Science</string>
    <string name="music">Music</string>
    <string name="school">School</string>
    <string name="seinen">Seinen</string>
    <string name="shoujo">Shoujo</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="vampire">Vampire</string>
    <string name="issekai">Issekai</string>
    <string name="shounen">Shounen</string>
    <string name="television">Television</string>
    <string name="superhero">Superhero</string>
    <string name="sport">Sport</string>
    <string name="magic">Magic</string>
    <string name="game">Game</string>
    <string name="slice_of_life">Slice of Life</string>
    <string name="mystery">Mystery</string>
    <string name="home">Home</string>
    <string name="my_list">My list</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="nickname">Nickname</string>
    <string name="skip">Skip</string>
    <string name="_1_introduction">1. Introduction</string>
    <string name="intro">We at Fuzi LLC respect the privacy of your personal information and, as such, make every effort to ensure your information is protected and remains private. As the owner and operator of loremipsum.io (the Website) hereafter referred to in this Privacy Policy as Lorem Ipsum, us, our or we, we have provided this Privacy Policy to explain how we collect, use, share and protect information about the users of our Website (hereafter referred to as “user”, “you” or your). For the purposes of this Agreement, any use of the terms Lorem Ipsum, us, our or we includes Wasai LLC, without limitation. We will not use or share your personal information with anyone except as described in this Privacy Policy. This Privacy Policy will inform you about the types of personal data we collect, the purposes for which we use the data, the ways in which the data is handled and your rights with regard to your personal data. Furthermore, this Privacy Policy is intended to satisfy the obligation of transparency under the EU General Data Protection Regulation 2016/679 (GDPR) and the laws implementing GDPR. For the purpose of this Privacy Policy the Data Controller of personal data is Wasai LLC and our contact details are set out in the Contact section at the end of this Privacy Policy. Data Controller means the natural or legal person who (either alone or jointly or in common with other persons) determines the purposes for which and the manner in which any personal information are, or are to be, processed. For purposes of this Privacy Policy, Your Information or Personal Data means information about you, which may be of a confidential or sensitive nature and may include personally identifiable information (PII) and/or financial information. PII means individually identifiable information that would allow us to determine the actual identity of a specific living person, while sensitive data may include information, comments, content and other information that you voluntarily provide. Lorem Ipsum collects information about you when you use our Website to access our services, and other online products and services (collectively, the “Services”) and through other interactions and communications you have with us. The term Services includes, collectively, various applications, websites, widgets, email notifications and other mediums, or portions of such mediums, through which you have accessed this Privacy Policy. We may change this Privacy Policy from time to time. If we decide to change this Privacy Policy, we will inform you by posting the revised Privacy Policy on the Site. Those changes will go into effect on the Last updated date shown at the end of this Privacy Policy. By continuing to use the Site or Services, you consent to the revised Privacy Policy. We encourage you to periodically review the Privacy Policy for the latest information on our privacy practices. BY ACCESSING OR USING OUR SERVICES, YOU CONSENT TO THE COLLECTION, TRANSFER, MANIPULATION, STORAGE, DISCLOSURE AND OTHER USES OF YOUR INFORMATION (COLLECTIVELY, USE OF YOUR INFORMATION) AS DESCRIBED IN THIS PRIVACY POLICY. IF YOU DO NOT AGREE WITH OR CONSENT TO THIS PRIVACY POLICY YOU MAY NOT ACCESS OR USE OUR SERVICES.</string>
    <string name="child_privacy">Lorem Ipsum does not knowingly collect personally identifiable information (PII) from persons under the age of 13. If you are under the age of 13, please do not provide us with information of any kind whatsoever. If you have reason to believe that we may have accidentally received information from a child under the age of 13, please contact us immediately at legal@wasai.co. If we become aware that we have inadvertently received Personal Information from a person under the age of 13, we will delete such information from our records.</string>
    <string name="for_you_privacy">We collect information you provide directly to us, such as when you request information, create or modify your personal account, request Services, subscribe to our Services, complete a Lorem Ipsum form, survey, quiz or application, contact customer support, join or enroll for an event or otherwise communicate with us in any manner. This information may include, without limitation: name, date of birth, e-mail address, physical address, business address, phone number, or any other personal information you choose to provide.</string>
    <string name="collect_data_privacy">We may collect information about you from sources other than you, such as from social media websites (i.e., Facebook, LinkedIn, Twitter or others), blogs, analytics providers, business affiliates and partners and other users. This includes, without limitation, identity data, contact data, marketing and communications data, behavioral data, technical data and content data.</string>
    <string name="agreeted_privacy">We may collect, use and share Aggregated Data such as statistical or demographic data for any purpose. Aggregated Data is de-identified or anonymized and does not constitute Personal Data for the purposes of the GDPR as this data does not directly or indirectly reveal your identity. If we ever combine Aggregated Data with your Personal Data so that it can directly or indirectly identify you, we treat the combined data as PII which will only be used in accordance with this Privacy Policy.</string>
    <string name="cookies_privacy">When you visit our Services, we may send one or more Cookies – small data files – to your computer to uniquely identify your browser and let us help you log in faster and enhance your navigation through the Sites. “Cookies” are text-only pieces of information that a website transfers to an individual’s hard drive or other website browsing equipment for record keeping purposes. A Cookie may convey anonymous information about how you browse the Services to us so we can provide you with a more personalized experience, but does not collect personal information about you. Cookies allow the Sites to remember important information that will make your use of the site more convenient. A Cookie will typically contain the name of the domain from which the Cookie has come, the “lifetime” of the Cookie, and a randomly generated unique number or other value. Certain Cookies may be used on the Sites regardless of whether you are logged in to your account or not.</string>
    <string name="_6_cookies_log_files_and_anonymous_identifiers">6. COOKIES, LOG FILES AND ANONYMOUS IDENTIFIERS</string>
    <string name="_5_aggregated_data">5. AGGREGATED DATA</string>
    <string name="_4_information_third_party_provide">4. Information third party provide</string>
    <string name="_3_information_provided_directly_by_you">3. Information Provided DIRECTLY BY YOU</string>
    <string name="_2_children_s_privacy">2. Children\'s Privacy</string>
    <string name="using_infro_privacy">Our primary purpose in collecting, holding, using and disclosing your Information is for our legitimate business purposes and to provide you with a safe, smooth, efficient, and customized experience. We will use this information in order to: Provide users with our Services and customer support including, but not limited to, confirming emails related to our services, reminders, confirmations, requests for information and transactions. Contact you and provide you with information. Analyze, improve and manage our Services and operations. Resolve problems and disputes, and engage in other legal and security matters. Enforce any terms and conditions of any subscription for our Services. Additionally, we may use the information we collect about you to: Send you communications we think will be of interest to you, including information about products, services, promotions, news, and events of Lorem Ipsum and other affiliated or sponsoring companies with whom we have established a relationship. Display advertising, including advertising that is targeted to you or other users based on your location, interests, as well as your activities on our Services. Verify your identity and prevent impersonation, spam or other unauthorized or illegal activity. We may transfer the information described in this Privacy Policy to, and process and store it in, the United States and other countries, some of which may have less protective data protection laws than the region in which you reside. Where this is the case, we will take appropriate measures to protect your personal information in accordance with this Privacy Policy.</string>
    <string name="_8_social_media_sharing">8. SOCIAL MEDIA SHARING</string>
    <string name="social_media_privacy">Our Services may now or in the future integrate with social sharing features and other related tools which let you share actions you take on our Services with other Apps, sites, or media, and vice versa. Your use of such features enables the sharing of information with your friends or the public, depending on the settings you establish with the social sharing service. Please refer to the privacy policies of those social sharing services for more information about how they handle the data you provide to or share through them. Any information or content that you voluntarily disclose for posting publicly to a social sharing service becomes available to the public, as controlled by any applicable privacy settings that you set with the social sharing service. Once you have shared User Content or made it public, that User Content may be re-shared by others. If you remove information that you posted to the social sharing service, copies may still remain viewable in cached and archived pages, or if other users or third parties, using the social sharing service, have re-shared, copied or saved that User Content.</string>
    <string name="search">Search</string>
</resources>