<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/primaryS"
    android:paddingTop="15dp"
    android:layout_marginTop="45dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/border_margin"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_introduction"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:text="@string/intro"
        android:ellipsize="end"
        android:maxLines="10"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_2_children_s_privacy"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:textColor="@color/text"
        android:text="@string/child_privacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_3_information_provided_directly_by_you"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/for_you_privacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_4_information_third_party_provide"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/collect_data_privacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_5_aggregated_data"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/agreeted_privacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_6_cookies_log_files_and_anonymous_identifiers"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/cookies_privacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="7. HOW WE USE INFORMATION WE COLLECT"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/using_infro_privacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_8_social_media_sharing"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:text="@string/social_media_privacy"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>